--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   background-image: url("../img/bg.png");
-  background-size: auto;
-  background-repeat: no-repeat;
+  background-position: center;
+
   padding: 0px;
   margin: 0px;
   font-family: 'Nunito', sans-serif;
