--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -24,7 +24,10 @@ input, button {
 	bottom: 0;
 	left: 0;
 	right: 0;
-  	
+    
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+
 	margin: auto;
 }
 
@@ -49,25 +52,24 @@ input, button {
 }
 
 .main-div button, .loggedin-div button {
-  background: #5d8ffc;
-  color: #fff;
-  border: 1px solid #5d8ffc;
+  background: #74a0ff;
+  color: white;
+  border: 1px solid #74a0ff;
   padding: 15px;
   display: block;
   width: 100%;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
+  transition: 0.2s;
 }
 
 .main-div button:hover, .loggedin-div button:hover {
-  background: #90b3ff;
-  border: 1px solid #90b3ff;
+  background: #5d8ffc;
+  border: 1px solid #5d8ffc;
   cursor: pointer;
 }
 
 .login-title {
   text-align: center;
+  font-size: 22px;
   padding-bottom: 10px;
 }
 
